[package]
name = "foucault"
version = "0.2.1"
edition = "2021"
authors = ["Adrien Degliame--Fecchio"]
repository = "https://github.com/Adi-df/foucault/"
description = "A minimal TUI note taking app"

[package.metadata.wix]
upgrade-guid = "49E7C3B1-F9F9-4344-A3B8-2AE27FC5724B"
path-guid = "E5D1C3D7-1E27-4590-8F0F-DF9E159067DC"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
scopeguard = "1.2.0"
log = { version = "0.4.22", features = ["std"] }
env_logger = "0.10.2"
dirs = "5.0.1"
clap = { version = "4.5.16", features = ["derive"] }
markdown = "1.0.0-alpha.20"
crossterm = "0.27.0"
ratatui = "0.26.3"
opener = "0.6.1"
question = "0.2.2"
unicode-segmentation = "1.11.0"
random_color = "0.8.0"
tokio = { version = "1.39.3", features = ["full"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "migrate", "macros", "sqlite"] }
futures = "0.3.30"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
