[workspace]
members = ["foucault-client", "foucault-core", "foucault-server"]

[package]
name = "foucault"
version = "0.2.3"
edition = "2021"
license = "GPL-3.0"
authors = ["Adrien Degliame--Fecchio <adidf-web@laposte.net>"]
repository = "https://github.com/Adi-df/foucault/"
description = "A minimal TUI note taking app"

[dependencies]
foucault-core = { path = "foucault-core" }
foucault-client = { path = "foucault-client" }
foucault-server = { path = "foucault-server" }
anyhow = "1.0.86"
question = "0.2.2"
ratatui = "0.28.0"
thiserror = "1.0.63"
scopeguard = "1.2.0"
crossterm = "0.28.1"
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["std"] }
tokio = { version = "1.39.3", features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }

[package.metadata.wix]
upgrade-guid = "49E7C3B1-F9F9-4344-A3B8-2AE27FC5724B"
path-guid = "E5D1C3D7-1E27-4590-8F0F-DF9E159067DC"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Run the prepare-queries task as part of the build setup
github-build-setup = "build-setup.yml"
