[workspace]
members = ["foucault-client", "foucault-core", "foucault-server"]

[package]
name = "foucault"
version = "0.3.5"
edition = "2021"
license = "GPL-3.0"
authors = ["Adrien Degliame--Fecchio <adrien.degliame@ik.me>"]
repository = "https://github.com/Adi-df/foucault/"
description = "A minimal TUI note taking app"

[dependencies]
foucault-core = { path = "foucault-core" }
foucault-client = { path = "foucault-client" }
foucault-server = { path = "foucault-server" }
anyhow = "1.0.86"
question = "0.2.2"
ratatui = "0.29.0"
thiserror = "2.0.12"
scopeguard = "1.2.0"
crossterm = "0.29.0"
env_logger = "0.11.5"
log = { version = "0.4.22", features = ["std"] }
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.16", features = ["derive", "cargo"] }

[package.metadata.wix]
upgrade-guid = "49E7C3B1-F9F9-4344-A3B8-2AE27FC5724B"
path-guid = "E5D1C3D7-1E27-4590-8F0F-DF9E159067DC"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
strip = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
