[package]
name = "foucault-client"
version = "0.5.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Adrien Degliame--Fecchio <adidf-web@laposte.net>"]
repository = "https://github.com/Adi-df/foucault/"

[dependencies]
foucault-core = { path = "../foucault-core" }
dirs = "5.0.1"
edit = "0.1.5"
opener = "0.7.2"
anyhow = "1.0.86"
ratatui = "0.28.1"
textwrap = "0.16.1"
thiserror = "1.0.63"
scopeguard = "1.2.0"
crossterm = "0.28.1"
serde-error = "0.1.2"
markdown = "1.0.0-alpha.20"
unicode-segmentation = "1.11.0"
log = { version = "0.4.22", features = ["std"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
