[package]
name = "foucault-core"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Adrien Degliame--Fecchio <adidf-web@laposte.net>"]
repository = "https://github.com/Adi-df/foucault/"

[dependencies]
colored = "2.1.0"
thiserror = "1.0.63"
serde = { version = "1.0.209", features = ["derive"] }
