[package]
name = "foucault-server"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
authors = ["Adrien Degliame--Fecchio <adidf-web@laposte.net>"]
repository = "https://github.com/Adi-df/foucault/"

[dependencies]
foucault-core = { path = "../foucault-core" }
axum = "0.7.5"
anyhow = "1.0.86"
futures = "0.3.30"
thiserror = "1.0.63"
serde-error = "0.1.2"
random_color = "0.8.0"
log = { version = "0.4.22", features = ["std"] }
tokio = { version = "1.39.3", features = ["full"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio", "migrate", "macros", "sqlite"] }
