[package]
name = "foucault-server"
version = "0.4.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Adrien Degliame--Fecchio <adidf-web@laposte.net>"]
repository = "https://github.com/Adi-df/foucault/"

[dependencies]
foucault-core = { path = "../foucault-core" }
axum = "0.8.3"
anyhow = "1.0.86"
futures = "0.3.30"
thiserror = "2.0.12"
serde-error = "0.1.2"
random_color = "1.0.0"
log = { version = "0.4.22", features = ["std"] }
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio", "migrate", "macros", "sqlite"] }
